# ncurses-projects

./: CMakeLists.txt  LICENSE  README.md  main.cpp  player.cpp  player.hpp
